@@ -250,7 +250,7 @@ module.exports = function( caminio ){
     var self = this;
 
     if( !('update' in this.controller) )
-      this.controller['update'] = [ updateDoc, getDoc, function( req, res ){
+      this.controller['update'] = [ getDoc, updateDoc, getDoc, function( req, res ){
 
         if( typeof(self.model.rebuildJSON) === 'function' )
           return res.json( self.model.rebuildJSON( req.doc ) );
@@ -285,7 +285,9 @@ module.exports = function( caminio ){
       if( 'updatedAt' in self.model.schema.paths )
         req.body[self.underscoredName].updatedAt = new Date();
 
-      self.model.update( { _id: req.param('id') }, req.body[self.underscoredName], function( err, affected ){
+      req.doc.multiSet(req.body[self.underscoredName], req.doc.publicAttributes);
+
+      req.doc.save( function( err, affected ){
         if( err ){ return res.json( 500, { error: 'server_error', details: err }); }
         next();
       });
