@@ -12,6 +12,7 @@ var _             = require('lodash')
   , inflection    = require('inflection')
   , mongoose      = require('mongoose')
   , jsonSelect    = require('mongoose-json-select')
+  , multiSet      = require('mongoose-multi-set')
 
 module.exports = function( caminio ){
 
@@ -70,22 +71,34 @@ module.exports = function( caminio ){
     //schema.virtual('id').get(function(){ return this._id ? this._id.toHexString() : null; });
     schema.set('toJSON', { virtuals: true });
     schema.set('toObject', { virtuals: true });
-    schema.publicAttributes = schema.publicAttributes || ['_id'];
+    schema.publicAttributes = collectPublicAttrs(schema);
+    schema.virtual('publicAttributes').get( function(){ return schema.publicAttributes; });
     _.each( schema.paths, function( val, key ){
       if( val.options && val.options.public ){
         if( schema.publicAttributes.indexOf(key) < 0 )
           schema.publicAttributes.push( key );
       }
     });
-
     // TODO: add public: true/false in schema and allow to
     // set all attributes as publicAttributes
-    schema.publicAttributes.push('_id');
-    schema.publicAttributes.push('-__v');
     schema.plugin(jsonSelect, schema.publicAttributes.join(' '));
+    schema.plugin(multiSet);
 
     return schema;
 
+  }
+
+  function collectPublicAttrs(schema){
+    var attrs = schema.publicAttributes || ['_id'];
+    if( attrs.indexOf('_id') < 0 )
+      attrs.push('_id');
+    if( attrs.indexOf('-__v') < 0 )
+      attrs.push('-__v');
+    Object.keys(schema.paths).forEach(function(key){
+      if( schema.paths[key].public && attrs.indexOf(key) )
+        attrs.push( key );
+    });
+    return attrs;
   }
 
 }
