@@ -57,7 +57,6 @@ module.exports.normalizeFilename = function normalizeFilename( str ){
  * @param {Object} err Mongoose Error object
  */
 module.exports.formatErrors = function formatErrors( err ){
-  console.log('err', err);
   return { 
     errors: _.transform(err.errors, function(result,values,key){ 
       if( values.type === 'user defined' )
