@@ -35,7 +35,8 @@
     "mongoose-json-select": "~0.2.1",
     "ejs": "~0.8.5",
     "mkdirp": "~0.3.5",
-    "nodemailer": "~0.6.0"
+    "nodemailer": "~0.6.0",
+    "mongoose-multi-set": "~0.1.0"
   },
   "devDependencies": {
     "caminio-fixtures": "git://github.com/caminio/caminio-fixtures#0.1.1",
