@@ -3,6 +3,8 @@
   - added some util tests
   - crud_models get interceptable (control flow can be intercepted via _beforeResponse)
   - siteVersion, caminioVersion as variable in layouts
+  - crud update calls mongoose' update on instantiated model (instead of Model class) which
+    causes middleware to get executed
 
 1.1.1
   - Fix Issues #1: singular/plural policies definition mixed up by loader
